refactor: input não corrige mais nem autocompleta

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </div>
     
         <div class="terminal">
-            <input type="text" name="input_text" id="input_text">
+            <input type="text" name="input_text" id="input_text" autocomplete="off" spellcheck="false">
             <div id="display">
 
             </div>
